<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="hu.barbar.timelogger.MainActivity" >

    <item
        android:id="@+id/action_new"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_new"
    />
    
    <item
        android:id="@+id/action_send_email"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_send_email"
    />
   
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"
    />
    
    <item
        android:id="@+id/action_clear_empty_lines"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_clear_empty_lines"
    />
    

</menu>
